# python-test-driven-learning

./: .gitignore  .vimrc  Makefile  Pipfile  import_test.py  os_test.py  pyproject.toml  requirements.txt  test-sqlite3.py  test_bisect.py  test_bit_manipulation.py  test_builtin_functions.py  test_class.py  test_collections_lib.py  test_csv.py  test_datetime.py  test_doctest.py  test_exception.py  test_file_io.py  test_import.py  test_json.py  test_list_comprehensions.py  test_math.py  test_mock.py  test_numpy.py  test_numpy_random.py  test_panda.py  test_panda_data_frame.py  test_pandas.py  test_pandas_data_frame.py  test_pandas_date.py  test_pandas_series.py  test_pandas_text_str.py  test_plot.py  test_pytest.py  test_python_basic.py  test_python_data_structures.py  test_regex.py  test_scientific_mode.py  test_scope.py  (+9 more)
.tmontmp/: .testmoncoverage390043_rc
just_test/: vscode-neuron.py
matplotlib/: bar_chart.py  colors.py  precision_recall_curve.py  scatter_matrix.py  semilogx.py  sklearn_learning_curve.py  test_animation.py  test_bar_chart.py  test_hist.py  test_plot.py
matplotlib_examples/: animation.py  plot-with-different-scales.py  polynomial_linear_regression.py  precision_recall_curve.py  seaborn.py  test_plot.py
src/matplotlib/: pandas_dataframe_plot.py  pandas_plotting.py  sklearn_validation_curve.py
src/thread/: threading_lock.py
stub/: package_test_math.py  plain.txt  test_json.json  test_panda.csv  test_panda_join.csv  test_pandas_series.py  test_spark.csv  test_spark_join.csv
tests/: test-pydantic.py  test_builtin_functions.py  test_class.py  test_collections_lib.py  test_datetime.py  test_decimal.py  test_decorators.py  test_dictionary.py  test_doctest.py  test_dunder_magic_methods.py  test_dundur_magic_methods.py  test_enum.py  test_exception.py  test_factory_boy_sequence_iterator.py  test_flask.py  test_functools.py  test_heap.py  test_import.py  test_import_mock.py  test_json.py  test_list_tuple.py  test_litequeue.py  test_math.py  test_named_tuples.py  test_patch_and_import_mock.py  test_pydantic.py  test_pytest.py  test_python_basic_and_syntax.py  test_regex.py  test_requests.py  test_requests_responses_mock.py  test_set.py  test_sqlite3.py  test_type_annotations.py  test_type_annotations_3_9.py  test_types.py  test_unittest.py  test_unittest_mock.py  test_urllib.py
(+7 files in other folders)
