[tool.poetry]
name = "python-test-driven-learning"
version = "0.1.0"
description = ""
authors = ["Sanghyun Lee <hammerha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "*"
pandas = "*"
numpy = "*"
ipython = "*"
ipykernel = "*"
scipy = "*"
sklearn-pandas = "*"
scikit-learn = "*"
pytest = "*"
pytest-testmon = "*"
matplotlib = "*"
pyspark = "*"
seaborn = "*"
responses = "*"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
ptpython = "*"
flake8 = "*"
yapf = "*"
rope = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
