[tool.poetry]
name = "python-test-driven-learning"
version = "0.1.0"
description = ""
authors = ["Sanghyun Lee <hammerha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-watch = "*"
pandas = "*"
numpy = "*"
ipython = "*"
ipykernel = "*"
scipy = "*"
sklearn-pandas = "*"
scikit-learn = "*"
pytest = "*"
pytest-testmon = "*"
matplotlib = "*"
pyspark = "*"
seaborn = "*"
responses = "*"
Flask = "^2.1.1"
litequeue = "^0.5"
pytest-flake8 = "^1.1.1"
pydentic = "^0.0.1-alpha.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
ptpython = "*"
flake8 = "*"
yapf = "*"
rope = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv -s --disable-warnings"

[tool.black]
skip-string-normalization = true
